# bscc

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Main.hs  Makefile  NEWS  README  Setup.hs  TRADEMARKS  bootstrap  bscc-help2man-shim.hs  bscc.cabal  stack.yaml  uuagc_options
.github/: PULL_REQUEST_TEMPLATE.md
Bscc/: GccArgParse.hs  HelpAndVersion.hs  Lex.hs  Link.hs  Main.hs  Parse.hs  Sem.ag  ThisPackage.hs  Token.hs  Triplet.hs
Bscc/Ast/: Plain.ag  WithSem.ag
Bscc/Codegen/: Ir.ag  Machine.hs
Bscc/Sem/Internal/: Types.ag
Bscc/Symbol/: Name.hs  Table.ag
Bscc/ThisPackage/: Dir.hs  Info.hs  Private.hs
bscc-setuphs/: bscc-setuphs.cabal
bscc-setuphs/Bscc/: SetupHs.hs
data/: help.txt  version.txt
doc/example/: README
doc/example/hello/: README  hello.bas
doc/example/hello-awkward/: README  main.bas  showmsgbox.bas
libbsccts/: README  startup.ll
test/: run-tests.hs
test/Test/Bscc/: GccArgParse.hs  HelpAndVersion.hs  Lex.hs  Main.hs  Parse.hs  Sem.hs
test/Test/Bscc/Codegen/: Ir.hs  Machine.hs
test/Test/Bscc/Symbol/: Name.hs  Table.hs
