-- -*- indent-tabs-mode: nil; -*-

-- This file defines the Cabal package for bscc
-- Copyright © 2012 Iain Nicol

-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU Affero General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>.

name:               bscc
synopsis:           The Brainsick code compiler
description:
  The Brainsick code compiler (bscc) is a compiler for a dialect of the
  BASIC language.  In particular, bscc aims to be compatible with the
  Visual Basic for Applications (VBA) language dialect.
version:            0.1.0
cabal-version:      >=1.18
-- License is AGPLv3+, but ``cabal check'' doesn't recognise the AGPL.
license:            AGPL-3
license-file:       COPYING
copyright:          © 2012, 2013 Iain Nicol
author:             Iain Nicol
maintainer:         http://www.brainsick.cc/
category:           Languages
homepage:           http://www.brainsick.cc/
bug-reports:        http://www.brainsick.cc/bugs/
-- A non-trivial Setup.hs file requires the Custom build type, to force
-- the cabal-install program to use said file.
build-type:         Custom
extra-source-files:
  -- The .ag files additionally need to be added to the "other-modules".
  Bscc/Ast/Plain.ag  Bscc/Ast/WithSem.ag  Bscc/Codegen/Ir.ag
  Bscc/Sem.ag  Bscc/Symbol/Table.ag
  doc/example/hello/hello.bas  doc/example/hello/README
  doc/example/hello-awkward/main.bas  doc/example/hello-awkward/README
  doc/example/hello-awkward/showmsgbox.bas
  libbsccts/README
  .gitignore AUTHORS bscc-help2man-shim.hs ChangeLog INSTALL NEWS README
  uuagc_options
data-dir: .
data-files:
  libbsccts/startup.ll

source-repository head
  type: git
  location: git://git.iainnicol.com/brainsick/bscc.git

executable bscc
  main-is: Bscc/Main.hs
  -- Set the source directory to the root package directory, as opposed
  -- to say a ``src'' subdirectory.  The advantage of this is that GHCI
  -- running under Emacs, for example, can actually resolve imports.
  -- Thanks to namespacing (Bscc.Foo -> Bscc/Foo.hs), the source files
  -- thankfully are not intermingled with the build system files in the
  -- package root.
  hs-source-dirs: .
  -- Just like for .hs files, the .ag modules must be added here.
  -- Additionally, the .ag files must be added to "extra-source-files",
  -- as well as to the uuagc_options file.  Ref:
  -- <http://lists.science.uu.nl/pipermail/hut-developers/2011-February/
  -- 000248.html>.
  other-modules:
    Bscc.Ast.Plain Bscc.Ast.WithSem
    Bscc.Codegen.Ir Bscc.Codegen.Machine
    Bscc.GccArgParse Bscc.HelpAndVersion
    Bscc.Lex
    Bscc.Link
    Bscc.Parse
    Bscc.Sem
    Bscc.Symbol.Name
    Bscc.Symbol.Table
    Bscc.ThisPackage
    Bscc.Token
    Bscc.Triplet
    -- Cabal User Guide makes explicit that Paths_foo module should be
    -- included here.
    Paths_bscc
  default-language: Haskell2010
  -- Every {-# LANGUAGE extension #-} which has its use declared in any
  -- source file has to be additionally listed here.  Not doing this can
  -- cause build errors, at least with TemplateHaskell when profiling is
  -- enabled.
  other-extensions:
    CPP,
    FlexibleInstances,
    OverloadedStrings,
    TemplateHaskell
  -- The dependency version requirements are likely stricter than
  -- necessary, to avoid the need to test we can be build against
  -- previous APIs.
  --
  -- Setup.hs has dependencies, so in order to ensure that a ``cabal
  -- install'' of this package necessarily works, we must ensure its
  -- dependencies are listed here.
  build-depends:
    -- I would have liked to write code against the Haskell standard
    -- library (plus other imports), by for example writing
    --   haskell2010 == 1.1.*
    -- However, as soon as you depend upon one import which is part of
    -- the base package and only the base package, it is game over and
    -- you must instead use base and not haskell2010.  For example, the
    -- Cabal-generated Paths_bscc module imports Data.Version from base.

    -- Keep dependencies in sync with the test-suite.
    base >= 4.6 && < 5,
    bytestring == 0.10.*,
    Cabal == 1.18.*,
    containers == 0.5.*,
    derive == 2.5.* && >= 0.2.10,
    directory == 1.2.*,
    errors == 1.4.* && >= 1.4.2,
    groom == 0.1.* && >= 0.1.1,
    filepath == 1.3.*,
    lens == 3.9.* && >= 3.9.0.3,
    -- Parsec 3.1.2 changed the behaviour of `lookAhead', so only
    -- downgrade with caution.
    parsec == 3.1.* && >= 3.1.3,
    process == 1.1.*,
    temporary == 1.1.* && >= 1.1.2,
    text == 0.11.* && >= 0.11.2,
    uuagc == 0.9.* && >= 0.9.40.3
  build-tools:
    -- Dependencies listed here---at least the ones Cabal doesn't
    -- naturally understand---should also be added to hookedPrograms in
    -- Setup.hs.  See that file's `appendHookedPrograms' function.
    git,
    help2man,
    runhaskell
  cpp-options: -DBUILD


test-suite tests
  type: exitcode-stdio-1.0
  main-is: run-tests.hs
  hs-source-dirs: test .
  other-modules:
    Bscc.HelpAndVersion
    Test.Bscc.HelpAndVersion
  default-language: Haskell2010
  build-depends:
    -- Unique to the test suite.
    HTF == 0.11.*,
    -- Same as for bscc.
    base >= 4.6 && < 5,
    bytestring == 0.10.*,
    Cabal == 1.18.*,
    containers == 0.5.*,
    derive == 2.5.* && >= 0.2.10,
    directory == 1.2.*,
    errors == 1.4.* && >= 1.4.2,
    groom == 0.1.* && >= 0.1.1,
    filepath == 1.3.*,
    lens == 3.9.* && >= 3.9.0.3,
    parsec == 3.1.* && >= 3.1.3,
    process == 1.1.*,
    temporary == 1.1.* && >= 1.1.2,
    text == 0.11.* && >= 0.11.2,
    uuagc == 0.9.* && >= 0.9.40.3
  -- Disable optimization.  According to the FAQ of test-framework
  -- (http://batterseapower.github.com/test-framework/), GHC can
  -- optimize away calls to `error', causing tests to misbehave.
  ghc-options: -O0
