-- -*- indent-tabs-mode: nil; -*-

-- This file defines the Cabal package for bscc-setuphs
-- Copyright © 2012, 2013 Iain Nicol

-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU Affero General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>.

name:               bscc-setuphs
synopsis:           Setup.hs for bscc
description:
  Provides the implementation of Setup.hs for the Brainsick code
  compiler (bscc).
version:            0.2.0
cabal-version:      >=1.20
license:            AGPL-3
license-file:       COPYING
copyright:          © 2012, 2013 Iain Nicol
author:             Iain Nicol
maintainer:         https://www.brainsick.cc/
category:           Languages
homepage:           https://www.brainsick.cc/
bug-reports:        https://www.brainsick.cc/bugs/
build-type:         Simple

source-repository head
  type: git
  location: https://git.iainnicol.com/brainsick/bscc.git

library
  exposed-modules: Bscc.SetupHs
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    Cabal == 1.20.*,
    pathtype == 0.5.* && >= 0.5.3,
    uuagc == 0.9.* && >= 0.9.40.3,
    uuagc-cabal == 1.0.* && >= 1.0.5.0
  ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -Werror
